--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo no test",
+    "test": "echo no tests yet",
     "dev": "nodemon dev.js"
   },
   "author": "john mckenna",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.3.1",
     "chalk": "^5.2.0",
