--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@sndwrks/lumberjack",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "logger powered by winston with a loki integration",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo no tests yet",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "nodemon dev.js"
   },
   "author": "john mckenna",
@@ -20,6 +20,7 @@
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.7"
   }
 }
