--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.1",
     "chalk": "^5.2.0",
     "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1",
     "winston-transport": "^4.5.0"
   },
   "devDependencies": {
